完成RAG流式下载与结构化分块基础